<resources>
    <string name="app_name">Suvasam</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="admob_app_id">ca-app-pub-6506911315414653~6740738797</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6506911315414653/6509638653</string>
    <string name="suvasam">Suvasam</string>
    <string name="favourite">Favourite</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_sample_date">16-May-19</string>
    <string name="confirm_screen_thanks_msg">Thanks for Making Madurai Greener</string>
    <string name="confirm_screen_checkout_msg">Proceed To Checkout</string>
    <string name="donate_screen_title">Donate to Make Madurai Greener</string>
    <string name="donate_screen_add_btn">Add</string>
    <string name="awareness_sample_desc">hello</string>
    <string name="widget_title">Suvasam</string>
    <string name="widget_sample_data">Sample test</string>
    <string name="cancel">Cancel</string>
    <string name="reset">reset</string>
</resources>
