<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ConfirmLayout"
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/theme_accent"
    android:elevation="4dp"
    android:padding="10dp">


    <TextView
        android:id="@+id/ConfirmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:fontFamily="sans-serif"
        android:text="@string/confirm_screen_thanks_msg" />

    <LinearLayout
        android:id="@+id/confirmSummaryLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/confSummaryDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/checkoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_screen_checkout_msg" />
            <Button
                android:id="@+id/confirmCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
